# FreeSwitch_VAPI

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: setup-guide.md
freeswitch-config/: dialplan-public.xml  event_socket.conf.xml  external.xml  sip-trunk-external.xml
scripts/: install-freeswitch.sh  start-bot.sh
voice-bot/: .env.example  .gitignore  loguru.py  requirements.txt  run.sh  sdk_server_ai.py  server.py  test_api.py  test_hybrid.py  test_real_llm.py  test_yandex.py
voice-bot-pexpect/: config.py  freeswitch_manager.py  main.py
voice-bot/app/: asr.py  call_handler.py  dialog_manager.py  llm.py  main.py  tts.py
voice-bot/config/: agent.yaml  settings.py
