[project]
name = "freeswitch-vapi"
version = "0.1.0"
description = "FreeSWITCH voice bot with Yandex SpeechKit and OpenAI-compatible LLM integration"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "loguru>=0.7.2",
    "openai>=1.12.0",
    "pexpect>=4.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "signalwire>=2.1.0",
    "signalwire-agents>=1.1.0",
]

[dependency-groups]
dev = [
    "grpcio>=1.60.0",
]

[tool.uv]
package = false
